# Kutinf

Code/: CMakeLists.txt
Code/Linux/: Histogram.cpp  Histogram.h  Kutinf.cpp  histogram_out2.txt
Code/Windows/: Histogram.cpp  Kutinf.cpp  bemenet.txt  histogram_out1.txt  stdafx.cpp
Latex/: beadando.aux  beadando.tex
